[package]
name = "bevy_infig"
version = "0.1.0"
edition = "2024"

[[test]]
name = "config"
harness = false

[dependencies]
bevy = { version = "0.15", default-features = false}
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"
vfs = "0.12"