[package]
name = "momori"
version = "0.1.0"
edition = "2021"

[lib]
name = "mmcore"
path = "src/lib.rs"

[[bin]]
name = "momori"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15" }
clap = { version = "4.5", features = ["derive"] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
vfs = "0.12"
bevy_infig = {path = "../bevy_infig"}

